fix for wrap

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -44,11 +44,10 @@
 body{
     margin: 0;
     font-family: "Quicksand", sans-serif;
-    overflow-x: hidden;
     width: 100%;
+    overflow-wrap: anywhere;
 }
 
 .css-zxdg2z{
-    /* padding: 22px !important; */
     width: calc(100% - 48px) !important;
 }
